Grace/tests/gibbs/errors/t196.grace
// ERROR = P1004
if true) then {
    print "true"
}
